--- a/views/account/afficAccount.phtml
+++ b/views/account/afficAccount.phtml
@@ -5,7 +5,7 @@
  * @var Client $client
  */
 ?>
-<div class="content">
+<div id="center_block">
     <div class="row mb-5">
         <div class="list-group list-group-flush col">
             <a href="/account/historique" class="list-group-item list-group-item-action text-blue">Historique des commandes</a>
