--- a/views/admin/afficAdmin.phtml
+++ b/views/admin/afficAdmin.phtml
@@ -1,4 +1,4 @@
-<div class="w-25 mx-auto my-5">
+<div id="center_block">
     <div class="list-group list-group-flush">
         <a href="/account" class="list-group-item list-group-item-action"><< Retour</a>
         <a href="/admin/produits" class="list-group-item list-group-item-action text-blue">Gestion des produits</a>
