--- a/assets/custom/styles/main.css
+++ b/assets/custom/styles/main.css
@@ -666,15 +666,15 @@ progress {
   display: flex;
   flex-wrap: wrap;
   margin-top: calc(var(--bs-gutter-y) * -1);
-  margin-right: calc(var(--bs-gutter-x) * -.5);
-  margin-left: calc(var(--bs-gutter-x) * -.5);
+  margin-right: calc(var(--bs-gutter-x) * -0.5);
+  margin-left: calc(var(--bs-gutter-x) * -0.5);
 }
 .row > * {
   flex-shrink: 0;
   width: 100%;
   max-width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * .5);
-  padding-left: calc(var(--bs-gutter-x) * .5);
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
   margin-top: var(--bs-gutter-y);
 }
 
@@ -6613,15 +6613,15 @@ textarea.form-control-lg {
 }
 
 .ratio-4x3 {
-  --bs-aspect-ratio: calc(3 / 4 * 100%);
+  --bs-aspect-ratio: 75%;
 }
 
 .ratio-16x9 {
-  --bs-aspect-ratio: calc(9 / 16 * 100%);
+  --bs-aspect-ratio: 56.25%;
 }
 
 .ratio-21x9 {
-  --bs-aspect-ratio: calc(9 / 21 * 100%);
+  --bs-aspect-ratio: 42.8571428571%;
 }
 
 .fixed-top {
@@ -11420,11 +11420,6 @@ html, body {
   height: 100%;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-}
-
 h1, .h1 {
   font-family: "Merriweather", serif;
 }
@@ -11443,10 +11438,7 @@ header#main_header {
   color: #f0f0f0;
   display: flex;
   justify-content: space-between;
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
+  height: 67.19px;
 }
 header#main_header h1, header#main_header .h1, header#main_header p {
   margin: 0;
@@ -11507,6 +11499,7 @@ header#main_header #header_right #accountMsg {
 
 div#main_wrapper {
   display: flex;
+  height: calc(100% - 67.19px);
 }
 div#main_wrapper div#accueil {
   width: 100%;
@@ -11550,7 +11543,7 @@ div#main_wrapper div.liste_produits .fiche_produit:hover {
 }
 div#main_wrapper #filters_panel {
   background-color: #f0f0f0;
-  min-width: 200px;
+  width: 250px;
 }
 div#main_wrapper #filters_panel #filters_header {
   padding: 12px 0;
@@ -11577,6 +11570,10 @@ div#main_wrapper #filters_panel #filters_button {
 div#main_wrapper div#main_affic {
   width: 100%;
   margin: 1.5rem;
+}
+div#main_wrapper div#center_block {
+  width: 50%;
+  margin: 6rem auto 0;
 }
 
 /*# sourceMappingURL=main.css.map */
