--- a/views/admin/afficProduits.phtml
+++ b/views/admin/afficProduits.phtml
@@ -3,6 +3,7 @@
  * @var Produit[] $produits
  * @var Categorie[] $categories
  * @var Difficulty[] $difficultes
+ * @var string $selectedProduit
  */
 ?>
 <div class="w-100 m-4">
@@ -26,31 +27,35 @@
                         <?php
                         foreach($produits as $produit) {
                             ?>
-                            <option value="<?php echo $produit->GetRefProduit() ?>"><?php echo $produit->GetLibProduit() ?></option>
+                            <option value="<?php echo $produit->GetRefProduit() ?>" <?php
+                                if(isset($_SESSION["selectedProduit"]) && $_SESSION["selectedProduit"] == $produit->GetRefProduit()) {
+                                    echo "selected";
+                                    unset($_SESSION["selectedProduit"]);
+                                }
+                            ?>><?php echo $produit->GetLibProduit() ?></option>
                             <?php
                         }
                         ?>
                     </select>
                 </div>
-                <div class="border rounded w-50 mx-auto p-3">
+                <form class="border rounded w-50 mx-auto p-3 mb-5" method="post" enctype="multipart/form-data">
 
                     <div class="row mb-1 align-items-center">
                         <label for="admin_edit_ref_produit" class="col-lg-5 col-form-label">Ref</label>
                         <div class="col-lg-7">
-                            <input id="admin_edit_ref_produit" type="text" class="form-control form-control-sm" readonly>
+                            <input id="admin_edit_ref_produit" name="admin_edit_ref_produit" type="text" class="form-control form-control-sm" readonly>
                         </div>
                     </div>
                     <div class="row mb-1 align-items-center">
                         <label for="admin_edit_libelle_produit" class="col-lg-5 col-form-label">Libellé</label>
                         <div class="col-lg-7">
-                            <input id="admin_edit_libelle_produit" type="text" class="form-control form-control-sm">
+                            <input id="admin_edit_libelle_produit" name="admin_edit_libelle_produit" type="text" class="form-control form-control-sm">
                         </div>
                     </div>
                     <div class="row mb-1 align-items-center">
                         <label for="admin_edit_categ_produit" class="col-lg-5 col-form-label">Catégorie</label>
                         <div class="col-lg-7">
-                            <select id="admin_edit_categ_produit" class="form-select form-select-sm">
-                                <option value="null">Aucun</option>
+                            <select id="admin_edit_categ_produit" name="admin_edit_categ_produit" class="form-select form-select-sm">
                                 <?php
                                 foreach($categories as $categorie) {
                                     ?>
@@ -64,9 +69,9 @@
                         </div>
                     </div>
                     <div class="row mb-1 align-items-center">
-                        <label for="admin_edit_categ_produit" class="col-lg-5 col-form-label">Sous-catégorie</label>
+                        <label for="admin_edit_souscateg_produit" class="col-lg-5 col-form-label">Sous-catégorie</label>
                         <div class="col-lg-7">
-                            <select id="admin_edit_categ_produit" class="form-select form-select-sm" disabled>
+                            <select id="admin_edit_souscateg_produit" name="admin_edit_souscateg_produit" class="form-select form-select-sm" disabled>
                                 <option value="null">Aucune</option>
                             </select>
                         </div>
@@ -74,20 +79,20 @@
                     <div class="row mb-1 align-items-center">
                         <label for="admin_edit_desc_produit" class="col-lg-5 col-form-label">Description</label>
                         <div class="col-lg-7">
-                            <textarea id="admin_edit_desc_produit" class="form-control form-control-sm" rows="10"></textarea>
+                            <textarea id="admin_edit_desc_produit" name="admin_edit_desc_produit" class="form-control form-control-sm" rows="10"></textarea>
                         </div>
                     </div>
                     <div class="row mb-1 align-items-center">
                         <label for="admin_edit_prix_produit" class="col-lg-5 col-form-label">Prix</label>
                         <div class="col-lg-7 d-flex align-items-center">
-                            <input type="number" min="0" id="admin_edit_prix_produit" class="form-control form-control-sm me-1">
+                            <input type="number" min="0" id="admin_edit_prix_produit" name="admin_edit_prix_produit" class="form-control form-control-sm me-1">
                             €
                         </div>
                     </div>
                     <div class="row mb-1 align-items-center">
                         <label for="admin_edit_difficulte_produit" class="col-lg-5 col-form-label">Difficulté</label>
                         <div class="col-lg-7 d-flex align-items-center">
-                            <select id="admin_edit_difficulte_produit" name="difficulte" class="form-select form-select-sm">
+                            <select id="admin_edit_difficulte_produit" name="admin_edit_difficulte_produit" class="form-select form-select-sm">
                                 <?php
                                 foreach($difficultes as $difficulte) {
                                     ?>
@@ -103,26 +108,129 @@
                     <div class="row mb-1 align-items-center">
                         <label for="admin_edit_seuil_produit" class="col-lg-5 col-form-label">Seuil alerte</label>
                         <div class="col-lg-7">
-                            <input type="number" min="0" id="admin_edit_seuil_produit" class="form-control form-control-sm">
+                            <input type="number" min="0" id="admin_edit_seuil_produit" name="admin_edit_seuil_produit" class="form-control form-control-sm">
                         </div>
                     </div>
                     <div class="row mb-1 align-items-center">
                         <label for="admin_edit_stock_produit" class="col-lg-5 col-form-label">Quantité stock</label>
                         <div class="col-lg-7">
-                            <input type="number" min="0" id="admin_edit_stock_produit" class="form-control form-control-sm">
+                            <input type="number" min="0" id="admin_edit_stock_produit" name="admin_edit_stock_produit" class="form-control form-control-sm">
+                        </div>
+                    </div>
+                    <div class="row mb-1 align-items-center">
+                        <label for="admin_edit_photo_produit" class="col-lg-5 col-form-label">Image du produit</label>
+                        <div class="col-lg-7">
+                            <input type="file" name="admin_edit_photo_produit" id="admin_edit_photo_produit" class="form-control-file">
                         </div>
                     </div>
                     <div class="text-center mt-4">
-                        <button class="btn btn-jct-orange" id="admin_edit_save_produit">Enregistrer</button>
+                        <button class="btn btn-jct-orange" id="admin_edit_save_produit" name="submit_update">Enregistrer</button>
                         <button class="btn btn-secondary" id="admin_edit_cancel_edit_produit">Annuler</button>
                     </div>
 
-                </div>
+                </form>
             </div>
 
         </div>
-        <div class="tab-pane fade" id="ajouter" role="tabpanel" aria-labelledby="ajouter-tab">...</div>
+        <div class="tab-pane fade" id="ajouter" role="tabpanel" aria-labelledby="ajouter-tab">
+
+            <div class="container-fluid my-3">
+                <form class="border rounded w-50 mx-auto p-3 mb-5" method="post" enctype="multipart/form-data">
+
+                    <div class="row mb-1 align-items-center">
+                        <label for="admin_new_ref_produit" class="col-lg-5 col-form-label">Ref</label>
+                        <div class="col-lg-7">
+                            <input id="admin_new_ref_produit" name="admin_new_ref_produit" type="text" class="form-control form-control-sm">
+                        </div>
+                    </div>
+                    <div class="row mb-1 align-items-center">
+                        <label for="admin_new_libelle_produit" class="col-lg-5 col-form-label">Libellé</label>
+                        <div class="col-lg-7">
+                            <input id="admin_new_libelle_produit" name="admin_new_libelle_produit" type="text" class="form-control form-control-sm">
+                        </div>
+                    </div>
+                    <div class="row mb-1 align-items-center">
+                        <label for="admin_new_categ_produit" class="col-lg-5 col-form-label">Catégorie</label>
+                        <div class="col-lg-7">
+                            <select id="admin_new_categ_produit" name="admin_new_categ_produit" class="form-select form-select-sm">
+                                <?php
+                                foreach($categories as $categorie) {
+                                    ?>
+                                    <option value="<?php echo $categorie->GetRef() ?>">
+                                        <?php echo $categorie->GetLibelle() ?>
+                                    </option>
+                                    <?php
+                                }
+                                ?>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row mb-1 align-items-center">
+                        <label for="admin_new_souscateg_produit" class="col-lg-5 col-form-label">Sous-catégorie</label>
+                        <div class="col-lg-7">
+                            <select id="admin_new_souscateg_produit" name="admin_new_souscateg_produit" class="form-select form-select-sm" disabled>
+                                <option value="null">Aucune</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row mb-1 align-items-center">
+                        <label for="admin_new_desc_produit" class="col-lg-5 col-form-label">Description</label>
+                        <div class="col-lg-7">
+                            <textarea id="admin_new_desc_produit" name="admin_new_desc_produit" class="form-control form-control-sm" rows="10"></textarea>
+                        </div>
+                    </div>
+                    <div class="row mb-1 align-items-center">
+                        <label for="admin_new_prix_produit" class="col-lg-5 col-form-label">Prix</label>
+                        <div class="col-lg-7 d-flex align-items-center">
+                            <input type="number" min="0" id="admin_new_prix_produit" name="admin_new_prix_produit" class="form-control form-control-sm me-1">
+                            €
+                        </div>
+                    </div>
+                    <div class="row mb-1 align-items-center">
+                        <label for="admin_new_difficulte_produit" class="col-lg-5 col-form-label">Difficulté</label>
+                        <div class="col-lg-7 d-flex align-items-center">
+                            <select id="admin_new_difficulte_produit" name="admin_new_difficulte_produit" class="form-select form-select-sm">
+                                <?php
+                                foreach($difficultes as $difficulte) {
+                                    ?>
+                                    <option value="<?php echo $difficulte->GetId() ?>">
+                                        <?php echo $difficulte->GetLibelle() ?>
+                                    </option>
+                                    <?php
+                                }
+                                ?>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row mb-1 align-items-center">
+                        <label for="admin_new_seuil_produit" class="col-lg-5 col-form-label">Seuil alerte</label>
+                        <div class="col-lg-7">
+                            <input type="number" min="0" id="admin_new_seuil_produit" name="admin_new_seuil_produit" class="form-control form-control-sm">
+                        </div>
+                    </div>
+                    <div class="row mb-1 align-items-center">
+                        <label for="admin_new_stock_produit" class="col-lg-5 col-form-label">Quantité stock</label>
+                        <div class="col-lg-7">
+                            <input type="number" min="0" id="admin_new_stock_produit" name="admin_new_stock_produit" class="form-control form-control-sm">
+                        </div>
+                    </div>
+                    <div class="row mb-1 align-items-center">
+                        <label for="admin_new_photo_produit" class="col-lg-5 col-form-label">Image du produit</label>
+                        <div class="col-lg-7">
+                            <input type="file" name="admin_new_photo_produit" id="admin_new_photo_produit" class="form-control-file">
+                        </div>
+                    </div>
+                    <div class="text-center mt-4">
+                        <button class="btn btn-jct-orange" id="admin_new_save_produit" name="submit_add">Enregistrer</button>
+                        <button class="btn btn-secondary" id="admin_new_cancel_edit_produit">Annuler</button>
+                    </div>
+
+                </form>
+            </div>
+
+        </div>
     </div>
 </div>
 
 <script src="/assets/custom/js/admin/produits/modifier.js"></script>
+<script src="/assets/custom/js/admin/produits/ajouter.js"></script>
