--- a/assets/custom/styles/main.scss
+++ b/assets/custom/styles/main.scss
@@ -120,6 +120,8 @@ div#main_wrapper {
         padding-top: 8px;
         max-height: 200px;
         max-width: 200px;
+        height: auto;
+        width: auto;
       }
       .difficulte {
         font-size: 1rem;
