--- a/views/account/afficHistorique.phtml
+++ b/views/account/afficHistorique.phtml
@@ -10,7 +10,7 @@
     <?php
     if (empty($historique)) {
         ?>
-        <p>Vous n'avez jamais commandé de produits sur ce site</p>
+        <p>Vous n'avez jamais commandé de produits</p>
         <?php
     } else {
         ?>
