--- a/views/admin/afficAdmin.phtml
+++ b/views/admin/afficAdmin.phtml
@@ -2,5 +2,7 @@
     <div class="list-group list-group-flush">
         <a href="/account" class="list-group-item list-group-item-action"><< Retour</a>
         <a href="/admin/produits" class="list-group-item list-group-item-action text-blue">Gestion des produits</a>
+        <a href="/admin/categories" class="list-group-item list-group-item-action text-blue">Gestion des catégories</a>
+        <a href="/admin/clients" class="list-group-item list-group-item-action text-blue">Gestion des clients</a>
     </div>
 </div>
