--- a/views/account/afficAccount.phtml
+++ b/views/account/afficAccount.phtml
@@ -9,7 +9,7 @@
     <div class="row mb-5">
         <div class="list-group list-group-flush col">
             <a href="/account/historique" class="list-group-item list-group-item-action text-blue">Historique des commandes</a>
-            <a href="/account/logout" class="list-group-item list-group-item-action text-danger">Se déconnecter</a>
+            <button type="button" id="account_logout" class="list-group-item list-group-item-action text-danger">Se déconnecter</button>
         </div>
         <div class="list-group list-group-flush col">
             <a href="/account/infos" class="list-group-item list-group-item-action text-blue">Modifier mes informations</a>
@@ -23,3 +23,5 @@
         </div>
     </div>
 </div>
+
+<script src="/assets/custom/js/account.js"></script>
