--- a/views/produit/afficProduit.phtml
+++ b/views/produit/afficProduit.phtml
@@ -11,19 +11,32 @@
         <p class="mb-3">Difficulté <?=$produit->GetDifficulte()->GetLibelle()?></p>
         <div class="mb-3"><?=$produit->GetDescProduit()?></div>
 
-        <form class="input-group mb-3 add_to_basket" method="post" action="/panier/add">
-            <button type="submit" class="btn btn-primary">Ajouter au panier</button>
-            <label class="sr-only" for="qte">Quantité</label>
-            <input type="number" name="qte" id="qte" class="form-control" value="<?php
+        <?php
+        $qteRestante = $produit->GetQteStock() - $produit->GetQteCommandee();
+        if ($qteRestante <= 0) {
+            ?>
+            <div class="mb-3">
+                <button disabled class="btn btn-danger">Rupture de stock</button>
+            </div>
+            <?php
+        } else {
+            ?>
+            <form class="input-group mb-3 add_to_basket" method="post" action="/panier/add">
+                <button type="submit" class="btn btn-primary">Ajouter au panier</button>
+                <label class="sr-only" for="qte">Quantité</label>
+                <input type="number" name="qte" id="qte" class="form-control" value="<?php
                 echo array_key_exists($produit->GetRefProduit(), $this->Panier()->PanierMin())
                     ? $this->Panier()->PanierMin()[$produit->GetRefProduit()]
                     : 0;
-            ?>" min="0">
-            <input type="hidden" name="refProduit" value="<?php echo $produit->GetRefProduit() ?>">
-        </form>
-    </div>
-    <h1>Produits fréquemment achetés ensemble</h1>
-    <div id="selection">
-        TODO
+                ?>" min="0" max="<?php echo $qteRestante ?>">
+                <input type="hidden" name="refProduit" value="<?php echo $produit->GetRefProduit() ?>">
+            </form>
+            <?php
+        }
+        if(isset($_SESSION["add_panier"][$produit->GetRefProduit()]) && $_SESSION["add_panier"][$produit->GetRefProduit()] === true) {
+            echo "<p class='text-success'>Le produit a été ajouté au panier</p>";
+        }
+        unset($_SESSION["add_panier"][$produit->GetRefProduit()]);
+        ?>
     </div>
 </div>
